# spatialstats

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
docs/guide/: index.rst  modules.rst  paircount.rst  particles.rst  points.rst  polyspectra.rst  utils.rst
docs/logistics/: gputoggle.rst  index.rst  install.rst
softstats/: Configuration.py  __init__.py  softstats.toml
softstats/averaging/: __init__.py
softstats/cloud/: __init__.py
softstats/optimize/: __init__.py  cminimizers.pyx  minimizers.py  setup.py
softstats/particles/: point_cloud.py  structure_factor.py
softstats/polyspectra/: bispectrum.py  cuda_bispectrum.py  cuda_powerspectrum.py
softstats/sampling/: __init__.py  grid_zoom.py
softstats/scatter/: __init__.py  _cuda_structure_factor.py  cuda_structure_factor  cuda_structure_factor.py  structure_factor.py
softstats/spectral/: __init__.py  _cuda_structure_factor.py  _powerspectrum.py  _structure_factor.py  bispectrum.py  cuda_bispectrum.py  cuda_powerspectrum.py  cuda_structure_factor.py  powerspectrum.py
softstats/util/: Makefile  __init__.py
softstats/utilities/: Configuration.py
softstats/utils/: __init__.py  setup.py
spatialstats/: Configuration.py  __init__.py
spatialstats/paircount/: __init__.py  particle_correlations.py
spatialstats/particles/: __init__.py  particle_cloud.py  particle_correlations.py
spatialstats/points/: __init__.py  point_cloud.py  structure_factor.py
spatialstats/polyspectra/: __init__.py  bispectrum.py  cuda_bispectrum.py  cuda_powerspectrum.py  fftpower.py  powerspectrum.py
spatialstats/utils/: __init__.py  binning.py
