[metadata]
name = spatialstats
version = 1.0.8
author = Michael O'Brien
url = https://github.com/mjo22/spatialstats
keywords = soft-condensed biophysics bispectrum cupy astrophysics
description = Statistical routines to analyze the spatial structure of 2D and 3D spatial fields and particle distributions.
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
    	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    	License :: OSI Approved :: MIT License

[options]
zip_safe = false
python_requires = >=3.7
install_requires = 
	numpy
packages = find:

[options.extras_require]
full = scipy; numba>=0.50; cupy>=8.0; pyfftw;
cpu = scipy; numba>=0.50;
gpu = cupy>=8.0;
pyfftw = pyfftw;
