[metadata]
name = spatialstats
version = 1.2.0
author = Michael O'Brien
url = https://github.com/mjo22/spatialstats
keywords = correlation-functions bispectrum statistical-mechanics particle-simulation
description = Correlation function routines spatial fields and particle distributions.
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
    	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    	License :: OSI Approved :: MIT License

[options]
zip_safe = false
python_requires = >=3.7
install_requires = 
	numpy
    scipy
packages = find:
